--- a/public/css/tabla.css
+++ b/public/css/tabla.css
@@ -2,7 +2,7 @@
 /*-------------  ajustes para la tabla de usuarios -------------------*/
 
 .motoclicletasTabla{
-    margin-top: 100px;
+    margin-top: 20px;
     padding: 10px;
     width: 100%;
     /* padding: 50px 50px; */
@@ -84,6 +84,42 @@
        cursor: pointer;
     }
 
+
+    /*botones de las acciones de la tabla*/
+
+    .delete-fisico-button{
+        background-color: #e14300;
+        color: rgb(255, 255, 255);
+        border-radius: 5px;
+        font-size: 13px;
+        padding: 1px 2px;
+        border-color: transparent;
+        margin-right: 5px;
+        margin-bottom: 5px;
+      
+    }
+
+    .delete-logico-button{
+        background-color: #e14300;
+        font-size: 13px;
+        color: rgb(255, 255, 255);
+        border-radius: 5px;
+        padding: 1px 2px;
+        border-color: transparent;
+      
+       
+    }
+
+    .update-button{
+        background-color: #088cff;
+        color: rgb(255, 255, 255);
+        border-radius: 5px;
+        font-size: 13px;
+        padding: 1px 2px;
+        border-color: transparent;
+        margin-right: 5px;
+        margin-bottom: 5px;
+    }
 
 
 
