--- a/public/css/buscar.css
+++ b/public/css/buscar.css
@@ -7,6 +7,12 @@
     align-items: center;
 }
 
+.buscar_form_container{
+
+    display: flex;
+    flex-direction: row;
+}
+
 
 
 .componentesFormulario_buscar{
@@ -34,10 +40,22 @@
 }
 
 
+.butonmostrar_todo{
+    background-color: #088cff;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    padding: 1px 10px;
+    border-color: transparent;
+    width: 150px;
+    margin-top: 31px;
+    margin-left: 30px;
+}
+
+
 
 @media all and (max-width:530px){
 
-    .buscar form{
+    .buscar {
         flex-direction: column;
         align-items: flex-start;
     }
@@ -45,6 +63,11 @@
     .botonesFormulario_buscar{
         margin-left: 10px;
     }
+
+    .butonmostrar_todo{
+        margin-left: 10px;
+    }
+    
    
 }  
 
